# rpclib

./: .clang-format  CMakeLists.txt  package-lock.json  package.json
cmake/: msvc_support.cmake
doc/pages/: index.md  versions.md
include/rpc/: backend.h  client.h  client.inl  dispatcher.h  dispatcher.inl  rpc_error.h  server.h
include/rpc/detail/: async_writer.h  server_session.h
lib/rpc/: backend.cc  client.cc  dispatcher.cc  server.cc
lib/rpc/detail/: server_session.cc
rpc/: CMakeLists.txt
rpc/include/rpc/: rpc.h  server.h
rpc/src/: library_main.cpp
rpc_test/: CMakeLists.txt
rpc_test/src/: main.cpp  test1.cpp
tests/: CMakeLists.txt
tests/rpc/: client_test.cc  dispatcher_test.cc  server_session_test.cc  server_test.cc  this_handler_test.cc  this_server_test.cc  this_session_test.cc
